# docflow

./: .gitignore  README.md  pyproject.toml
data/emails/: labels.csv
data/letters/: labels.csv
examples/: classification.py  classify_letters.py  test_classification_flow.py
notebooks/: tutorial.ipynb
src/docflow/: __init__.py  backends.py  classification.py  datasets.py  documents.py  generation.py  labels.py  metrics.py  outputs.py  parsers.py  progress.py  prompts.py  schemas.py
src/docflow/backends/: __init__.py  base.py  dummy.py  litellm.py  ollama.py
