[project]
name = "docflow"
version = "0.1.0"
description = "Document workflows with LLM backends."
requires-python = ">=3.10"
dependencies = [
    "pypdf",
    "litellm",
]

[project.optional-dependencies]
progress = [
    "tqdm",
]
dev = [
    "pre-commit",
    "ruff",
    "tqdm",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
